working wonderfully, about to go live

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -8,9 +8,7 @@
 
 </head>
 <body>
-    <h1>Hello World!</h1>
-    <a id = "button" href={{ url_for("app_blueprint.pg2") }}>LINK EXAMPLE</a>
-
-    
+    <h1>Welcome to Automit</h1>
+    <a id = "button" href={{ url_for("app_blueprint.pg2") }}>COMMIT</a>
 </body>
 </html>
