working on local

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <h1>Welcome to Automit</h1>
-    <a id = "button" href={{ url_for("app_blueprint.pg2") }}>COMMIT</a>
+    <a id = "button" href={{ url_for("run") }}>COMMIT</a>
 </body>
 </html>
